[gd_scene load_steps=2 format=3 uid="uid://chkxjxgladm4n"]

[ext_resource type="Script" path="res://src/MainScene.gd" id="1_x8w2s"]

[node name="MainScene" type="Node"]
script = ExtResource("1_x8w2s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "多线程模拟并发下载"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="StateLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "状态"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "启动"

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "暂停"

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResumeButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "继续"

[node name="Control4" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StopButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "停止"

[node name="Control5" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="AddTaskButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "添加任务"

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveTaskButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "移除任务"

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TaskCountLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "当前任务数"

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearTaskButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "清空任务"

[node name="Control4" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TestLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderMedium"
text = "数字数组"
horizontal_alignment = 1

[node name="TestButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "测试"
